Cleanup of depricated methods and outdated references